--- a/Fundamentos/contato.html
+++ b/Fundamentos/contato.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
@@ -65,21 +65,23 @@
     <footer>
         <div class="container">
             <a href="https://www.linkedin.com/in/felipe-freire-949967172/" target="_blank">
-                <img class="tm-social" src="../assets/img/linkedin.png" alt="Logo do Linkedin">
+                <img class="tm-social" src="assets/img/linkedin.png" alt="Logo do Linkedin">
             </a>
             <a href="https://github.com/FelipeFFS93/" target="_blank">
-                <img class="tm-social" src="../assets/img/github.png" alt="Logo do GitHub">
+                <img class="tm-social" src="assets/img/github.png" alt="Logo do GitHub">
             </a>
             <a href="https://www.instagram.com/_aquelemenino/" target="_blank">
-                <img class="tm-social" src="../assets/img/instagram.png" alt="Logo do Instagram">
-           </a>
+                <img class="tm-social" src="assets/img/instagram.png" alt="Logo do Instagram">
+            </a>
             
         </div>
 
         <p class="inform">
-       Todos os direitos reservados: Felipe Freire &copy;
+            Todos os direitos reservados: Felipe Freire &copy;
         </p>
     </footer>
+
+    <script src="assets/js/script.js"></script>
 
 </body>
 </html>
