--- a/Fundamentos/index.html
+++ b/Fundamentos/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Perfil</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
 
     <div class="container">
         <div>
-            <img class="br-50 wh" src="../assets/img/eu.jpeg" alt="Foto do criador desse conteudo">
+            <img class="br-50 wh" src="assets/img/eu.jpeg" alt="Foto do criador desse conteudo">
         </div>
 
         <div class="p1">
@@ -55,26 +55,26 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/IyeIqjVc9CM" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
-         </iframe>
+        </iframe>
     </div>
 
     <hr>
     <footer>
         <div class="container">
             <a href="https://www.linkedin.com/in/felipe-freire-949967172/" target="_blank">
-                <img class="tm-social" src="../assets/img/linkedin.png" alt="Logo do Linkedin">
+                <img class="tm-social" src="assets/img/linkedin.png" alt="Logo do Linkedin">
             </a>
             <a href="https://github.com/FelipeFFS93/" target="_blank">
-                <img class="tm-social" src="../assets/img/github.png" alt="Logo do GitHub">
+                <img class="tm-social" src="assets/img/github.png" alt="Logo do GitHub">
             </a>
             <a href="https://www.instagram.com/_aquelemenino/" target="_blank">
-                <img class="tm-social" src="../assets/img/instagram.png" alt="Logo do Instagram">
-           </a>
+                <img class="tm-social" src="assets/img/instagram.png" alt="Logo do Instagram">
+            </a>
             
         </div>
 
         <p class="inform">
-       Todos os direitos reservados: Felipe Freire &copy;
+            Todos os direitos reservados: Felipe Freire &copy;
         </p>
     </footer>
 
