Finalização do projeto em JS

--- a/Fundamentos/index.html
+++ b/Fundamentos/index.html
@@ -52,7 +52,10 @@
     <h2 class="inform">Ultimo video assistido</h2>
 
     <div class="container mb-50">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/IyeIqjVc9CM" title="YouTube video player"
+        <iframe 
+        width="560" 
+        height="315" 
+        src="https://www.youtube.com/embed/IyeIqjVc9CM" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
         </iframe>
