finalização do projeto

--- a/siteCompleto.html
+++ b/siteCompleto.html
@@ -15,6 +15,7 @@
             width: 40px;
             height: 40px;
         }
+
     </style>
 
 
@@ -26,7 +27,7 @@
     <!-- Menu -->
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Felipe Freire</a>
+        <a class="navbar-brand text-danger" href="#">Marvel Studios</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
             aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
             <span class="navbar-toggler-icon"></span>
@@ -52,10 +53,6 @@
                     </div>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Pesquisar</button>
-            </form>
         </div>
     </nav>
 
